# cifs-utils

./: AUTHORS  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  asn1.c  asn1.h  cifs.idmap.8.in  cifs.idmap.c  cifs.upcall.8  cifs.upcall.8.in  cifs.upcall.c  cifsacl.h  cifscreds.1  cifscreds.c  cifscreds.pod  cifsidmap.h  cifskey.c  cifskey.h  config.h.in  configure  configure.ac  data_blob.c  data_blob.h  getcifsacl.1  getcifsacl.1.in  getcifsacl.8.in  getcifsacl.c  idmap_plugin.c  idmap_plugin.h  idmapwb.8.in  idmapwb.c  idmapwb.pod  index.html  mount.cifs.8  mount.cifs.c  mount.h  mtab.c  pam_cifscreds.8  (+14 more)
aclocal/: idmap.m4  libcap.m4
contrib/: Makefile.in
contrib/request-key.d/: Makefile.in
doc/: cifs.upcall.8.xml  mount.cifs.8.xml
